--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
   "dependencies": {
     "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "axios": "^1.6.8",
+    "firebase": "^10.11.0",
+    "firebase-admin": "^12.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
