--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "5.8.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "saslprep": "^1.0.3",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
